--- a/mypro2/pro/css/index.css
+++ b/mypro2/pro/css/index.css
@@ -256,3 +256,131 @@
     background:url(../../image/index/deco/d8.jpg-taobao) no-repeat left top;
     background-size:100%;
 }
+.co{
+    background:url(../../image/index/china/c1.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ct{
+    background:url(../../image/index/china/c2.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cth{
+    background:url(../../image/index/china/c3.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cf{
+    background:url(../../image/index/china/c4.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cfi{
+    background:url(../../image/index/china/c5.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cs{
+    background:url(../../image/index/china/c6.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cse{
+    background:url(../../image/index/china/c7.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ce{
+    background:url(../../image/index/china/c8.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.co{
+    background:url(../../image/index/china/c1.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ct{
+    background:url(../../image/index/china/c2.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cth{
+    background:url(../../image/index/china/c3.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cf{
+    background:url(../../image/index/china/c4.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cfi{
+    background:url(../../image/index/china/c5.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cs{
+    background:url(../../image/index/china/c6.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.cse{
+    background:url(../../image/index/china/c7.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ce{
+    background:url(../../image/index/china/c8.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.so{
+    background:url(../../image/index/scu/s1.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.st{
+    background:url(../../image/index/scu/s2.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.sth{
+    background:url(../../image/index/scu/s3.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.sf{
+    background:url(../../image/index/scu/s4.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.sfi{
+    background:url(../../image/index/scu/s5.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ss{
+    background:url(../../image/index/scu/s6.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.sse{
+    background:url(../../image/index/scu/s7.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.se{
+    background:url(../../image/index/scu/s8.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.mon {
+    background: url(../../image/index/make/m1.jpg-taobao) no-repeat left top;
+    background-size: 100%;
+}
+.mt{
+    background:url(../../image/index/make/m2.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.mth{
+    background:url(../../image/index/make/m3.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.mf{
+    background:url(../../image/index/make/m4.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.mfi{
+    background:url(../../image/index/make/m5.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.ms{
+    background:url(../../image/index/make/m6.gif-taobao) no-repeat left top;
+    background-size:100%;
+}
+.mse{
+    background:url(../../image/index/make/m7.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
+.me{
+    background:url(../../image/index/make/m8.jpg-taobao) no-repeat left top;
+    background-size:100%;
+}
