--- a/mypro2/pro/css/live.css
+++ b/mypro2/pro/css/live.css
@@ -44,4 +44,31 @@
     border-radius:50%;
     margin-right:20px;
 }
-
+.topdy h1{
+    font-size:23px;
+    margin:0;
+    line-height: 40px;
+    font-weight: 400;
+}
+.rspan{
+    color: #7198ab;
+    font-size: 12px;
+    float: right;
+    display: block;
+    line-height: 60px;
+    font-weight: 700;
+}
+.t1{
+    border:1px solid #ddcfbe;
+    background-color:#fff;
+}
+.t1_2{
+    height:50px;
+    margin:5px;
+}
+.content .lh{
+    height:233px;
+}
+.t1_2 img{
+    vertical-align: top;
+}
