--- a/mypro2/pro/css/old.css
+++ b/mypro2/pro/css/old.css
@@ -1,35 +1,11 @@
 .t-nav{
-    background-color:#1eb07e;
-    border-bottom:6px solid #fe9002;
+    background-color:#9d1a44;
+    border-bottom:6px solid #1f934d;
 }
 .b-a{font-size:20px;color:#fff;}
-.t-nav .nav-item:hover{background-color:#fe9002;}
+.t-nav .nav-item:hover{background-color:#1f934d;}
 .b-a:hover{color:#fff;}
-.t-nav .nav-item.active{background-color:#fe9002}
-.livebar{
-    border-bottom:1px solid #ccc
-}
-.livebar .nav-item{
-    font-size:17px;
-    line-height:42px;
-    height:42px;
-}
-.all{
-    color:#fe9002;
-    font-size:22px;
-}
-.all:hover{
-    color:#fe9002;
-    text-decoration:underline;
-}
-.livelink{
-    padding:0;
-    color:#3a3a3a ;
-}
-.livelink:hover{
-    text-decoration: underline;
-    color:#f36;
-}
+.t-nav .nav-item.active{background-color:#1f934d}
 .topdy{
     border: 1px solid #898989;
     border-radius: 20px;
