--- a/mypro2/pro/css/tradition.css
+++ b/mypro2/pro/css/tradition.css
@@ -1,11 +1,11 @@
 .t-nav{
-    background-color:#1eb07e;
-    border-bottom:6px solid #fe9002;
+    background-color:#00aaff;
+    border-bottom:6px solid #ff3366;
 }
 .b-a{font-size:20px;color:#fff;}
-.t-nav .nav-item:hover{background-color:#fe9002;}
+.t-nav .nav-item:hover{background-color:#ff3366;}
 .b-a:hover{color:#fff;}
-.t-nav .nav-item.active{background-color:#fe9002}
+.t-nav .nav-item.active{background-color:#ff3366}
 .livebar{
     border-bottom:1px solid #ccc
 }
@@ -15,11 +15,10 @@
     height:42px;
 }
 .all{
-    color:#fe9002;
+    color:#ff3366;
     font-size:22px;
 }
 .all:hover{
-    color:#fe9002;
     text-decoration:underline;
 }
 .livelink{
