--- a/mypro2/pro/css/comm.css
+++ b/mypro2/pro/css/comm.css
@@ -12,6 +12,7 @@ text-decoration:none;
 list-style-type:none;
 box-sizing:border-box;
 }
+a{color:#3a3a3a}
 a:hover{color:#ee398a}
 .t1{
     border:1px solid #ddcfbe;
